[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "cosmic-torch"
version = "0.1.0"
description = "Equivariant convolution on molecule structure point clouds"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Tim Kucera", email = "kucera@biochem.mpg.de" },
]
dependencies = [
  "torch>=2.5",
  "torch_scatter>=2.1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/BorgwardtLab/Cosmo"
Repository = "https://github.com/BorgwardtLab/Cosmo"
Issues = "https://github.com/BorgwardtLab/Cosmo/issues"

[tool.hatch.build.targets.wheel]
packages = ["cosmic"]

