[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-torch"
description = "Equivariant convolution on molecule structure point clouds"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
  { name = "Tim Kucera", email = "kucera@biochem.mpg.de" },
]
dependencies = [
  "torch>=2.5",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/BorgwardtLab/Cosmo"
Repository = "https://github.com/BorgwardtLab/Cosmo"
Issues = "https://github.com/BorgwardtLab/Cosmo/issues"

[tool.setuptools.packages.find]
include = ["cosmic", "cosmic.*"]

[tool.setuptools_scm]

[project.optional-dependencies]
scatter = [
  "torch_scatter>=2.1",
]

